--- a/.env.travis
+++ b/.env.travis
@@ -2,6 +2,7 @@ APP_ENV=testing
 APP_KEY=FooBarZoo
 
 DB_CONNECTION=testing
+DATABASE_URL=postgres://user:password@example.com:5432/database
 DB_TEST_DATABASE=stories_test
 DB_TEST_USERNAME=root
 DB_TEST_PASSWORD=
