--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: php
 
 php:
-  - 7.1
+  - 7.0
 
 sudo: false
 
@@ -15,4 +15,6 @@ before_script:
   - composer self-update
   - composer install --no-interaction
 
-script: vendor/bin/phpunit
+script:
+  - php artisan key:generate
+  - vendor/bin/phpunit
