--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,28 @@
 language: php
+
 php:
-- 5.6
-- 7.0
+  - 5.6
+  - 7.0
+
 before_script:
-- mkdir bootstrap/cache
-- mkdir storage
-- mkdir storage/app
-- mkdir storage/framework
-- mkdir storage/framework/sessions
-- mkdir storage/framework/cache
-- mkdir storage/framework/views
-- chmod 777 -R storage
-- cp .env.travis .env
-- mysql -e 'create database homestead_test;'
-- composer self-update
-- composer install --no-interaction
-- php artisan key:generate
-- php artisan migrate
+  - mkdir -p bootstrap/cache
+  - mkdir -p storage
+  - mkdir -p storage/app
+  - mkdir -p storage/framework
+  - mkdir -p storage/framework/sessions
+  - mkdir -p storage/framework/cache
+  - mkdir -p storage/framework/views
+  - chmod 777 -R storage bootstrap/cache
+  - cp .env.travis .env
+  - mysql -e 'create database homestead_test;'
+  - composer self-update
+  - composer install --no-interaction
+  - php artisan key:generate
+  - php artisan migrate
+
 script:
-- vendor/bin/phpunit
+  - vendor/bin/phpunit
+
 deploy:
   provider: heroku
   api_key:
