--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "laravel/framework": "5.4.*",
         "laravel/socialite": "^3.0",
         "laravel/tinker": "~1.0",
+        "muratbsts/mail-template": "dev-master",
         "spatie/laravel-sluggable": "^1.5"
     },
     "require-dev": {
@@ -21,7 +22,8 @@
             "database"
         ],
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Muratbsts\\MailTemplate\\": "packages/muratbsts/mail-template"
         }
     },
     "autoload-dev": {
