--- a/composer.json
+++ b/composer.json
@@ -8,51 +8,60 @@
   "license": "MIT",
   "type": "project",
   "require": {
-    "php": ">=5.6.4",
-    "laravel/framework": "5.4.*",
-    "laravel/socialite": "^3.0",
-    "laravel/tinker": "~1.0",
+    "php": "^7.1.3",
+    "fideloper/proxy": "^4.0",
+    "laravel/framework": "5.7.*",
+    "laravel/socialite": "^3.1",
+    "laravel/tinker": "^1.0",
     "muratbsts/laravel-reactable": "dev-master",
-    "muratbsts/mail-template": "dev-master",
-    "spatie/laravel-sluggable": "^1.5"
+    "muratbsts/mail-template": "^0.0.1",
+    "spatie/laravel-sluggable": "^2.1"
   },
   "require-dev": {
-    "fzaninotto/faker": "~1.4",
-    "mockery/mockery": "0.9.*",
-    "phpunit/phpunit": "~5.7"
+    "beyondcode/laravel-dump-server": "^1.0",
+    "filp/whoops": "^2.0",
+    "fzaninotto/faker": "^1.4",
+    "mockery/mockery": "^1.0",
+    "nunomaduro/collision": "^2.0",
+    "phpunit/phpunit": "^7.0"
   },
-  "autoload": {
+ "autoload": {
     "classmap": [
-      "database"
+        "database/seeds",
+        "database/factories"
     ],
     "psr-4": {
-      "App\\": "app/"
+        "App\\": "app/"
     }
   },
   "autoload-dev": {
     "psr-4": {
-      "Tests\\": "tests/"
+        "Tests\\": "tests/"
+    }
+  },
+  "extra": {
+    "laravel": {
+        "dont-discover": [
+        ]
     }
   },
   "scripts": {
     "post-root-package-install": [
-      "php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+        "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
     ],
     "post-create-project-cmd": [
-      "php artisan key:generate"
+        "@php artisan key:generate --ansi"
     ],
-    "post-install-cmd": [
-      "Illuminate\\Foundation\\ComposerScripts::postInstall",
-      "php artisan optimize"
-    ],
-    "post-update-cmd": [
-      "Illuminate\\Foundation\\ComposerScripts::postUpdate",
-      "php artisan optimize"
+    "post-autoload-dump": [
+        "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+        "@php artisan package:discover --ansi"
     ]
   },
   "config": {
     "preferred-install": "dist",
     "sort-packages": true,
     "optimize-autoloader": true
-  }
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true
 }
