--- a/.travis.yml
+++ b/.travis.yml
@@ -3,19 +3,9 @@ language: php
 php:
   - 7.2
 before_script:
-  - mkdir -p bootstrap/cache
-  - mkdir -p storage
-  - mkdir -p storage/app
-  - mkdir -p storage/framework
-  - mkdir -p storage/framework/sessions
-  - mkdir -p storage/framework/cache
-  - mkdir -p storage/framework/views
-  - chmod 777 -R storage bootstrap/cache
-  - cp .env.travis .env
-  - mysql -e 'create database homestead_test;'
   - composer self-update
   - composer install --no-interaction
+  - cp .env.example .env
   - php artisan key:generate
-  - php artisan migrate
 script:
-  - vendor/bin/phpunit
+  - vendor/bin/phpunit --coverage-text
