--- a/composer.json
+++ b/composer.json
@@ -8,35 +8,38 @@
   "license": "MIT",
   "type": "project",
   "require": {
-    "php": "^7.1.3",
+    "php": ">= 7.1.3",
+    "ext-pdo": "*",
     "fideloper/proxy": "^4.0",
     "laravel/framework": "5.7.*",
     "laravel/socialite": "^3.1",
-    "laravel/tinker": "^1.0",
+    "laravel/tinker": "~1.0",
     "muratbsts/laravel-reactable": "dev-master",
     "muratbsts/mail-template": "^0.0.1",
-    "spatie/laravel-sluggable": "^2.1"
+    "spatie/laravel-sluggable": "2.1.*"
   },
   "require-dev": {
     "beyondcode/laravel-dump-server": "^1.0",
-    "filp/whoops": "^2.0",
-    "fzaninotto/faker": "^1.4",
-    "mockery/mockery": "^1.0",
+    "doctrine/dbal": "^2.8",
+    "filp/whoops": "2.*",
+    "fzaninotto/faker": "~1.4",
+    "laravel/browser-kit-testing": "^4.0",
+    "mockery/mockery": "0.9.*",
     "nunomaduro/collision": "^2.0",
     "phpunit/phpunit": "^7.0"
   },
- "autoload": {
+  "autoload": {
     "classmap": [
-        "database/seeds",
-        "database/factories"
+      "database/seeds",
+      "database/factories"
     ],
     "psr-4": {
-        "App\\": "app/"
+      "App\\": "app/"
     }
   },
   "autoload-dev": {
     "psr-4": {
-        "Tests\\": "tests/"
+      "Tests\\": "tests/"
     }
   },
   "extra": {
